c04Caso/db-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: kb-db
  labels:
    run: kb-db
spec:
  ports:
  - port: 3306
    name: kb-db
    targetPort: 3306
  selector:
    run: kb-db
