c04Caso/db-ingress.yml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
    name: db-ing
  spec:
    rules:
    - host: db-fabian.kube.um.edu.ar
      http:
        paths:
        - backend:
            serviceName: kb-db
            servicePort: 3306
          path: /
